src/test/ui/proc-macro/reserved-macro-names.stderr
error: name `cfg` is reserved in macro namespace
  --> $DIR/reserved-macro-names.rs:7:8
   |
LL | pub fn cfg(_: TokenStream, input: TokenStream) -> TokenStream {
   |        ^^^

error: name `cfg_attr` is reserved in macro namespace
  --> $DIR/reserved-macro-names.rs:13:8
   |
LL | pub fn cfg_attr(_: TokenStream, input: TokenStream) -> TokenStream {
   |        ^^^^^^^^

error: name `derive` is reserved in macro namespace
  --> $DIR/reserved-macro-names.rs:19:8
   |
LL | pub fn derive(_: TokenStream, input: TokenStream) -> TokenStream {
   |        ^^^^^^

error: aborting due to 3 previous errors

